# WBOT-101.1

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start.sh
config/: dj_spice.yaml  djs.yaml  moods.yaml  news_angles.yaml  station.yaml  talk_modes.yaml
config/genres/: alternative_rock.yaml  ambient_soundscape.yaml  blues.yaml  classical.yaml  country.yaml  dream_pop.yaml  edm.yaml  electronic.yaml  folk.yaml  folk_acoustic.yaml  folk_singer_songwriter.yaml  gospel.yaml  gospel_christian.yaml  hard_rock.yaml  heavy_metal.yaml  hiphop.yaml  hiphop_boom_bap.yaml  hiphop_rap.yaml  house_dance.yaml  indie.yaml  indie_rock.yaml  indie_rock_pop.yaml  jazz.yaml  jazz_lounge.yaml  kpop.yaml  latin.yaml  lofi_chill.yaml  melodic_progressive_metal.yaml  metal.yaml  pop.yaml  punk_rock.yaml  radio.yaml  reggae.yaml  rnb.yaml  rnb_soul.yaml  rock.yaml  synthwave.yaml  techno_house.yaml
docs/superpowers/plans/: 2026-07-21-local-ai-radio.md
docs/superpowers/specs/: 2026-07-21-local-ai-radio-design.md
models/: .gitignore
scripts/: install_acestep.sh  launch_vllm.sh  setup_check.sh  start.sh  start_acestep_api.sh  stop_acestep_api.sh  test_sd_turbo_cover.py
src/airadio/: __init__.py  config.py  health.py  languages.py  library.py  main.py  models_types.py  orchestrator.py  paths.py  preflight.py  prefs.py  songwriting.py  voices.py
src/airadio/art/: __init__.py  cover.py  sd_turbo.py
src/airadio/audio/: process.py
src/airadio/clients/: __init__.py  acestep.py  kokoro.py  ollama.py  ollama_pull.py  orpheus.py  vllm_unified.py
src/airadio/producers/: __init__.py  song.py  talk.py
src/airadio/static/: app.js  index.html  listen.html  listen.js  style.css
src/airadio/stream/: __init__.py  hls.py
tests/: test_api.py  test_config.py  test_cover.py  test_crossfade.py  test_djs.py  test_features_top5.py  test_languages.py  test_library_prefs.py  test_ollama_client.py  test_orchestrator.py  test_song_producer.py  test_talk_dynamic.py  test_talk_producer.py
web/: index.html  main.js  package-lock.json  package.json  vite.config.js
