[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airadio"
version = "0.1.0"
description = "100% local AI radio station (LLM + Kokoro TTS + ACE-Step)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "soundfile>=0.12.0",
  "numpy>=1.26.0",
  # Local TTS — installed into the app venv with the project
  "kokoro>=0.7.0",
  "torch",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
airadio = "airadio.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
