[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airadio"
version = "0.1.0"
description = "100% local AI radio station (LLM + Kokoro TTS + ACE-Step)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "soundfile>=0.12.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  # Everything below installs into the project .venv only (no system packages)
  "kokoro>=0.7.0",
  "torch",
  "imageio-ffmpeg>=0.5.0",   # ships ffmpeg binary inside the venv
  "espeakng-loader>=0.2.0",  # ships libespeak-ng inside the venv for Kokoro
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
]
# SD-Turbo album covers (optional; ~5GB model download on first use)
cover = [
  "diffusers>=0.30.0",
  "accelerate>=0.30.0",
  "safetensors>=0.4.0",
]

[project.scripts]
airadio = "airadio.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
airadio = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
